 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.8rc1

 - [ZBX-3175] fixed value type for 'vfs.fs.size[/var,used]' in data.sql (Sasha)
 - [ZBXNEXT-900] added support of {TRIGGER.ID} macro in a trigger url (Vedmak,Sasha)
 - [ZBX-4045] added check for duplicate hosts - if found, configuration syncer logs a warning and exits (rudolfs)
 - [ZBX-4059] fixed a potential buffer overflow in item parameter parsing (rudolfs)

Changes for 1.8.7

1.8.7rc1 was released as 1.8.7 without any changes

Changes for 1.8.7rc1

 - [ZBXNEXT-898] new trigger actions have "trigger = PROBLEM" and "not in maintenance" conditions by default (Vedmak)
 - [ZBX-4021] fixed item visibility in event then last value is null (Eduard)
 - [ZBX-4052] fixed key macros resolving in item names (Vedmak)
 - [ZBX-3998] reload recipient list for database down messages every CacheUpdateFrequency seconds (rudolfs)
 - [ZBX-4034] fixed macros resolving in item names (Vedmak)
 - [ZBX-4044] removed redundant query "SET CHARACTER SET" (asaveljevs,Vedmak)
 - [ZBX-3997] fixed IE9 dragging (Eduard)
 - [ZBX-4043] fixed processing of system.cpu.util on Solaris with non-sequential cpu numbers (Sasha)
 - [ZBX-4036] fixed period slider position saving in Monitoring->Events (Eduard)
 - [ZBX-1010] fixed processing of a vfs.fs.size metric on Solaris with filesystems larger than 2TB (Sasha)
 - [ZBX-3874] always enable all trigger severity checkboxes after enabling GUI Messaging in user profile (Eduard)
 - [ZBX-3889] fixed deadlocks while processing triggers (Sasha)
 - [ZBX-4023] fixed excess spacing and fake plural in graph deletion message (Richlv)